--- a/src/css/EditTask.css
+++ b/src/css/EditTask.css
@@ -1,4 +1,4 @@
-.create-task-container{
+.edit-task-container{
 	width: 850px;
 	height: 442px;
 	background: #21232E;
@@ -6,7 +6,7 @@
 	margin:auto;
 }
 
-.create-task-container h1{
+.edit-task-container h1{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
@@ -16,7 +16,7 @@
 
 	color: #C4C4C4;
 }
-.create-task-container h2{
+.edit-task-container h2{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
@@ -26,7 +26,7 @@
 	color: #C4C4C4;
 
 }
-.create-task-container .text-area-left{
+.edit-task-container .text-area-left{
 	width: 445.7px;
 	height: 31.1px;
 	background: #3D4158;
@@ -34,7 +34,7 @@
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.create-task-container .text-area-right{
+.edit-task-container .text-area-right{
 	width: 321.32px;
 	height: 31.1px;
 	background: #3D4158;
@@ -42,7 +42,7 @@
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.create-task-container .text-area-below{
+.edit-task-container .text-area-below{
 	width: 381.51px;
 	height: 31.1px;
 	background: #3D4158;
@@ -50,7 +50,7 @@
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.create-task-container .button-text{
+.edit-task-container .button-text{
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
