--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -48,6 +48,7 @@
 
 .right-control-panel .icons-wrapper {
 	list-style-type: none;
+	padding-top: 40px;
 }
 
 .right-control-panel .icons-wrapper .icon {
