--- a/src/css/EditProfileCard.css
+++ b/src/css/EditProfileCard.css
@@ -15,6 +15,7 @@
 	letter-spacing: 0.03em;
 
 	color: #C4C4C4;
+	font-weight: bold;
 }
 
 .edit-profile-card-container .card-address{
@@ -48,6 +49,15 @@
 	background: #3D4158;
 	border-radius: 10px;
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45))
+}
+
+.edit-profile-card-container .button2{
+	width: 130px;
+	height: 35px;
+	background: #3D4158;
+	border-radius: 10px;
+	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45));
+	opacity: 0.4;
 }
 
 .edit-profile-card-container .text-area-left{
