--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,18 +1,18 @@
 .dashboard-container{
 	width: 100%;
-	height: 100vh;
-	padding-left: 10px;
+	
+	padding: 15px;
 }
 
 .dashboard-container .dashboard-wrapper{
-	height: 100%;
+	height: 96%;
 
 	background: #2B303C;
 	border-radius: 25px;
 }
 
 .dashboard-container .heading-wrapper{
-	width: 981px;
+	width: 976px;
 	height: 49.15px;
 	background: #1B1B24;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
@@ -31,7 +31,7 @@
 }
 
 .dashboard-container .inside-wrapper{
-	width: 981px;
+	width: 976px;
 	height: 85.72px;
 	background: #232530;
 	border-radius: 15px;
