--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -1,14 +1,14 @@
 .settings-container{
 	width: 100%;
 	height: 100vh;
-	padding: 10px;
+	padding: 15px;
 }
 .settings-container h1 p{
 	color: #C4C4C4;
 }
 
 .settings-container .page-wrapper{
-	height: 100%;
+	height: 96%;
 	background: #2B303C;
 	border-radius: 25px;
 	padding: 10px;
@@ -49,6 +49,8 @@
 .settings-container .page-wrapper .setup-button-wrapper .discord-icon{
 	width: 16px;
 	height: 16px;
+	outline: none !important;
+    outline-offset: none !important;
 	
 }
 .settings-container .page-wrapper .setup-button-wrapper .heading{
@@ -78,6 +80,7 @@
 	font-size: 15px;
 	line-height: 22px;
 	/* identical to box height */
+	
 
 	color: #C4C4C4;
 }
@@ -116,7 +119,7 @@
 	font-family: MADE TOMMY;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 18px;
+	font-size: 16px;
 	line-height: 22px;
 
 	color: #C4C4C4;
@@ -129,6 +132,7 @@
 	background: #3D4158;
 	border-radius: 10px;
 	padding-left: 10px;
+	border: 0;
 	
 }
 
@@ -141,4 +145,9 @@
 
 	color: #C4C4C4;
 	
+}
+
+.settings-container .background-color{
+	background: #3D4158;
+	border: 0;
 }
