--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -1,7 +1,7 @@
 .tasks-container {
 	width: 100%;
 	height: 100vh;
-	padding-left: 10px;
+	padding: 15px;
 }
 
 .tasks-container  b {
@@ -57,10 +57,10 @@
 }
 
 .tasks-container .table-heading{
-	height: 540px;
+	height: 79%;
 	background: #2B303C;
 	border-radius: 25px;
-	padding: 10px;
+	padding: 15px;
 	margin-top: 10px;
 }
 
