--- a/src/css/TitleBar.css
+++ b/src/css/TitleBar.css
@@ -1,18 +1,40 @@
 .title-container{
-	background: #242934;
+	background: #1B1B24;
 	width: 100%;
-	height: 30px;
-	display: flex;
+	height: 34px;
+}
+.title-container .button-wrapper{
+	float: right;
+	background: #1B1B24;
+}
+
+.title-container .button-wrapper .close-btn{
+	margin-left:10px;
+	background: #1B1B24;
+
+}
+
+.title-container .button-wrapper .close-btn img{
+	filter: invert(92%) sepia(0%) saturate(235%) hue-rotate(141deg) brightness(85%) contrast(95%);
+}
+
+.title-container .button-wrapper .minimize-btn img{
+	filter: invert(92%) sepia(0%) saturate(235%) hue-rotate(141deg) brightness(85%) contrast(95%);
+}
+
+.title-container .button-wrapper .minimize-btn{
 	
+	background: #1B1B24;
 }
-.title-container .minimize-btn{
-	background-image: url('../assets/icons/titlebar/minus.svg')
+
+.title-container .button-wrapper .minimize-btn:hover{
+	
+	background: #999999;
 }
-.title-container  .maximize-btn{
-	background-image: url('../assets/icons/titlebar/stop.svg')
-}
-.title-container  .close-btn{
-	background-image: url('../assets/icons/titlebar/close.svg')
+
+.title-container .button-wrapper .close-btn:hover{
+	
+	background: #999999;
 }
 
 .title-container .buttons-active{
