--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,10 +1,12 @@
 .dashboard-container{
 	width: 100%;
+	height: 100vh;
 	
 	padding: 15px;
 }
 
 .dashboard-container .dashboard-wrapper{
+	width: 1020px;
 	height: 96%;
 
 	background: #2B303C;
