--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -8,10 +8,11 @@
 }
 
 .settings-container .page-wrapper{
+	width:1020px;
 	height: 96%;
 	background: #2B303C;
 	border-radius: 25px;
-	padding: 10px;
+	padding: 15px;
 }
 .settings-container .page-wrapper .title-wrapper .settings{
 	font-family: MADE TOMMY;
