--- a/src/css/TitleBar.css
+++ b/src/css/TitleBar.css
@@ -1,17 +1,27 @@
 .title-container{
-	background: #1B1B24;
-	width: 100%;
-	height: 34px;
+	background: #242934;
+	opacity: 1.0;
+	width: 1050x;
+	height: 35px;
+	
 }
 .title-container .button-wrapper{
 	float: right;
-	background: #1B1B24;
+	background: #242934;
+	
 }
 
 .title-container .button-wrapper .close-btn{
 	margin-left:10px;
-	background: #1B1B24;
+	background: #242934;
+	opacity: 1.0;
 
+}
+
+.title-container .button-wrapper .minimize-btn{
+	
+	background: #242934;
+	opacity: 1.0;
 }
 
 .title-container .button-wrapper .close-btn img{
@@ -22,19 +32,18 @@
 	filter: invert(92%) sepia(0%) saturate(235%) hue-rotate(141deg) brightness(85%) contrast(95%);
 }
 
-.title-container .button-wrapper .minimize-btn{
-	
-	background: #1B1B24;
-}
+
 
 .title-container .button-wrapper .minimize-btn:hover{
 	
-	background: #999999;
+	background: #1B1B24;
+	opacity: 1.0;
 }
 
 .title-container .button-wrapper .close-btn:hover{
 	
-	background: #999999;
+	background: #1B1B24;
+	opacity: 1.0;
 }
 
 .title-container .buttons-active{
