--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -2,7 +2,7 @@
     min-width: 200px;
     width: 200px;
     height: 100vh;
-    background: #1B1B24;
+    background: #180F29;
 }
 
 .exath-logo {
@@ -14,7 +14,7 @@
 
 .navbar-item {
     border-radius: 10px;
-    background: #2B303C;
+    background: #25193E;
     height: 47.33px;
     width: 184px;
     cursor: pointer;
