--- a/src/css/Captcha.css
+++ b/src/css/Captcha.css
@@ -10,7 +10,7 @@
 .captcha-container .page-wrapper{
 	width: 1020px;
 	height: 96%;
-	background: #2B303C;
+	background: #201636;
 	border-radius: 25px;
 	padding: 15px;
 }
@@ -36,7 +36,7 @@
 .captcha-container .table-heading{
 	width: 995px;
 	height: 43px;
-	background: #1B1B24;
+	background: #180F29;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
 }
@@ -55,7 +55,7 @@
 	width: 995px !important; 
 	height: 41px;
 
-	background: #232530;
+	background: #291C43;
 	border-radius: 15px;
 	padding: 10px;
 }
