--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -9,14 +9,14 @@
 	width: 1020px;
 	height: 96%;
 
-	background: #2B303C;
+	background: #201636;
 	border-radius: 25px;
 }
 
 .dashboard-container .heading-wrapper{
 	width: 976px;
 	height: 49.15px;
-	background: #1B1B24;
+	background: #180F29;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 15px;
 }
@@ -35,7 +35,7 @@
 .dashboard-container .inside-wrapper{
 	width: 976px;
 	height: 85.72px;
-	background: #232530;
+	background: #1D1130;
 	border-radius: 15px;
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
 }
