--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -15,7 +15,7 @@
 .tasks-container .control-panel-wrapper {
 	width: auto;
 	height: 110px;
-	background: #1B1B24;
+	background: #180F29;
 	border-radius: 25px;
 }
 
@@ -58,7 +58,7 @@
 
 .tasks-container .table-heading{
 	height: 79%;
-	background: #2B303C;
+	background: #201636;
 	border-radius: 25px;
 	padding: 15px;
 	margin-top: 10px;
@@ -67,7 +67,7 @@
 .tasks-container .table-heading-wrapper{
 	width: 100%;
 	height: 43px;
-	background: #1B1B24;
+	background: #180F29;
 	border-radius: 15px;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -83,7 +83,7 @@
 	width: 100%;
 	height: 41px;
 
-	background: #232530;
+	background: #291C43;
 	border-radius: 15px;
 }
 .tasks-container .individual-task-wrapper .individual-task  .headings{
