Updated UI color

--- a/src/css/CaptchaHarvester.css
+++ b/src/css/CaptchaHarvester.css
@@ -3,7 +3,7 @@
 	height: 720px;
 	top: 50%;
 
-	background: #21232E;
+	background: #201636;
 	margin: auto;
 	padding: 10px;
 }
@@ -27,7 +27,7 @@
 .captcha-harvester-container .text-area{
 	width: 392px;
 	height: 484px;
-	background: #3D4158;
+	background: #291C43;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.45);
 	border-radius: 15px;
 	border: none;
@@ -36,11 +36,11 @@
 .captcha-harvester-container .textarea{
 	width: 388px;
 	height: 36px;
-	background: #3D4158;
+	background: #291C43;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.45);
 	border-radius: 10px;
 }
 .captcha-harvester-container .background-color{
-	background: #3D4158;
+	background: #291C43;
 	border: 0;
 }
