--- a/src/css/CreateCaptcha.css
+++ b/src/css/CreateCaptcha.css
@@ -2,7 +2,7 @@
 	width: 567px;
 	height: 240px;
 	top: 50%;
-	background: #21232E;
+	background: #201636;
 	border-radius: 10px;
 	margin: auto;
 }
@@ -23,7 +23,7 @@
 	width: 525px;
 	height: 30px;
 
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	border: 0;
 }
@@ -34,7 +34,7 @@
 	width: 180px;
 	height: 30px;
 
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	border: 0;
 }
