--- a/src/css/CreateProfileCard.css
+++ b/src/css/CreateProfileCard.css
@@ -2,7 +2,7 @@
 	width: 850px;
 	height: 442px;
 
-	background: #21232E;
+	background: #201636;
 	border-radius: 15px;
 	margin: auto;
 }
@@ -47,7 +47,7 @@
 .create-profile-card-container .button{
 	width: 130px;
 	height: 35px;
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45))
 }
@@ -55,7 +55,7 @@
 .create-profile-card-container .button2{
 	width: 130px;
 	height: 35px;
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.45));
 	opacity: 0.4;
@@ -64,14 +64,14 @@
 .create-profile-card-container .text-area-left{
 	width: 410px;
 	height: 30px;
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 }
 
 .create-profile-card-container .text-area-right{
 	width: 250px;
 	height: 30px;
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	border:0;
 }
