--- a/src/css/DelayTask.css
+++ b/src/css/DelayTask.css
@@ -2,7 +2,7 @@
 	width: 550px;
 	height: 200px;
 
-	background: #21232E;
+	background: #201636;
 	border-radius: 15px;
 	margin: auto;
 }
@@ -31,7 +31,7 @@
 .delay-task-container .button{
 	width: 220px;
 	height: 51px;
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.45);
 	
