--- a/src/css/EditProxy.css
+++ b/src/css/EditProxy.css
@@ -2,7 +2,7 @@
 	width: 858px;
 	height: 442px;
 
-	background: #21232E;
+	background: #201636;
 	border-radius: 15px;
 	margin: auto;
 	padding: 10px;
@@ -39,7 +39,7 @@
 	width: 810px;
 	height: 296px;
 
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 20px;
 }
 
@@ -48,7 +48,7 @@
 	width: 180px;
 	height: 30px;
 
-	background: #3D4158;
+	background: #291C43;
 	border-radius: 10px;
 	border: 0;
 }
