--- a/src/css/IndividualTask.css
+++ b/src/css/IndividualTask.css
@@ -1,7 +1,9 @@
+.IndividualTask {
+	height: 510px;
+	overflow-y: scroll !important;
+}
 .individual-task-wrapper{
 	width: 100%;
-	height: 41px;
-
 	background: #291C43;
 	border-radius: 15px;
 }
@@ -11,6 +13,9 @@
 	font-weight: normal;
 	font-size: 14px!important; 
 	line-height: 17px;
+	margin-left: auto;
+    margin-right: auto;
+	vertical-align: middle;
 
 	color: #C4C4C4;
 }
@@ -22,6 +27,9 @@
 	font-size: 11px!important; 
 	line-height: 17px;
 	opacity: 0.5;
+	margin-left: auto;
+    margin-right: auto;
+	vertical-align: middle;
 
 	color: #C4C4C4;
 }
@@ -34,11 +42,15 @@
 	line-height: 17px;
 	padding-top: 12px;
 	margin-right: 30px;
+	margin-left: auto;
+    margin-right: auto;
+	vertical-align: middle;
 
 	color: #C4C4C4;
 }
 .individual-task-wrapper .individual-task .icons-wrapper{
 	list-style-type: none;
+	padding-inline-start: 0px!important;
 }
 
 .individual-task-wrapper .individual-task .icons-wrapper .icon{
