--- a/src/css/Task.css
+++ b/src/css/Task.css
@@ -1,3 +1,7 @@
+.task {
+	width: 100%;
+}
+
 .tasks-container {
 	width: 100%;
 	height: 100vh;
@@ -78,51 +82,4 @@
 	font-size: 20px !important;
 
 	color: #C4C4C4;
-}
-.tasks-container .individual-task-wrapper{
-	width: 100%;
-	height: 41px;
-
-	background: #291C43;
-	border-radius: 15px;
-}
-.tasks-container .individual-task-wrapper .individual-task  .headings{
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 14px!important; 
-	line-height: 17px;
-
-	color: #C4C4C4;
-}
-
-.tasks-container .individual-task-wrapper .individual-task  .headings-status{
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 11px!important; 
-	line-height: 17px;
-	opacity: 0.5;
-
-	color: #C4C4C4;
-}
-
-.tasks-container .individual-task-wrapper .individual-task  .headings-other{
-	font-family: MADE TOMMY;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 11px!important; 
-	line-height: 17px;
-	padding-top: 12px;
-	margin-right: 30px;
-
-	color: #C4C4C4;
-}
-.tasks-container .individual-task-wrapper .individual-task .icons-wrapper{
-	list-style-type: none;
-}
-
-.tasks-container .individual-task-wrapper .individual-task .icons-wrapper .icon{
-	display: inline;
-	padding-right: 5px;
 }
