--- a/src/css/CreateTask.css
+++ b/src/css/CreateTask.css
@@ -4,6 +4,8 @@
 	background: #201636;
 	border-radius: 15px;
 	margin:auto;
+	transform: translateY(35%);
+	z-index: 99;
 }
 
 .create-task-container h1{
@@ -64,4 +66,6 @@
 .create-task-container .background-color{
 	background: #291C43;
 	border: 0;
+	outline: none;
+	color: #C4C4C4;
 }
