--- a/src/css/CreateCaptcha.css
+++ b/src/css/CreateCaptcha.css
@@ -1,7 +1,8 @@
 .create-captcha-container{
 	width: 567px;
 	height: 240px;
-	top: 50%;
+	transform: translateY(100%);
+	z-index: 99;
 	background: #201636;
 	border-radius: 10px;
 	margin: auto;
@@ -22,7 +23,9 @@
 	position: absolute;
 	width: 525px;
 	height: 30px;
-
+	padding-left: 5px;
+	color: #C4C4C4;
+	outline: none;
 	background: #291C43;
 	border-radius: 10px;
 	border: 0;
@@ -33,7 +36,9 @@
 	position: absolute;
 	width: 180px;
 	height: 30px;
-
+	padding-left: 5px;
+	outline: none;
+	color: #C4C4C4;
 	background: #291C43;
 	border-radius: 10px;
 	border: 0;
