--- a/src/css/CreateProfileCard.css
+++ b/src/css/CreateProfileCard.css
@@ -1,7 +1,8 @@
 .create-profile-card-container{
 	width: 850px;
 	height: 442px;
-
+	transform: translateY(35%);
+	z-index: 99;
 	background: #201636;
 	border-radius: 15px;
 	margin: auto;
@@ -66,6 +67,9 @@
 	height: 30px;
 	background: #291C43;
 	border-radius: 10px;
+	padding-left: 10px;
+	outline: none;
+	color: #C4C4C4;
 }
 
 .create-profile-card-container .text-area-right{
@@ -74,6 +78,9 @@
 	background: #291C43;
 	border-radius: 10px;
 	border:0;
+	padding-left: 10px;
+	outline: none;
+	color: #C4C4C4;
 }
 
 .create-profile-card-container .button-text{
