--- a/src/css/CreateProfileShipping.css
+++ b/src/css/CreateProfileShipping.css
@@ -1,7 +1,8 @@
 .create-profile-shipping-container{
 	width: 850px;
 	height: 442px;
-
+	transform: translateY(35%);
+	z-index: 99;
 	background: #201636;
 	border-radius: 15px;
 	margin: auto;
@@ -65,6 +66,9 @@
 	height: 30px;
 	background: #291C43;
 	border-radius: 10px;
+	padding-left: 10px;
+	outline: none;
+	color: #C4C4C4;
 	border:0;
 }
 
@@ -73,6 +77,9 @@
 	height: 30px;
 	background: #291C43;
 	border-radius: 10px;
+	padding-left: 10px;
+	outline: none;
+	color: #C4C4C4;
 	border:0;
 }
 
