--- a/src/css/EditCaptcha.css
+++ b/src/css/EditCaptcha.css
@@ -1,8 +1,9 @@
 .edit-captcha-container{
 	width: 567px;
 	height: 240px;
-	top: 50%;
+	transform: translateY(100%);
 	background: #201636;
+	z-index: 99;
 	border-radius: 10px;
 	margin: auto;
 }
@@ -26,6 +27,9 @@
 	background: #291C43;
 	border-radius: 10px;
 	border: 0;
+	padding-left: 5px;
+	color: #C4C4C4;
+	outline: none;
 }
 
 .edit-captcha-container .textarea-hn{
@@ -36,6 +40,9 @@
 	background: #291C43;
 	border-radius: 10px;
 	border: 0;
+	padding-left: 5px;
+	color: #C4C4C4;
+	outline: none;
 }
 
 .edit-captcha-container .textarea .text{
