--- a/src/css/EditProxy.css
+++ b/src/css/EditProxy.css
@@ -1,7 +1,8 @@
 .edit-proxy-container{
 	width: 858px;
 	height: 442px;
-
+	transform: translateY(35%);
+	z-index: 99;
 	background: #201636;
 	border-radius: 15px;
 	margin: auto;
@@ -38,7 +39,8 @@
 .edit-proxy-container .text-area{
 	width: 810px;
 	height: 296px;
-
+	outline: none;
+	color: #C4C4C4;
 	background: #291C43;
 	border-radius: 20px;
 }
@@ -47,6 +49,8 @@
 	position: absolute;
 	width: 180px;
 	height: 30px;
+	outline: none;
+	color: #C4C4C4;
 
 	background: #291C43;
 	border-radius: 10px;
@@ -67,4 +71,6 @@
 	width: 700px;
 	background: #291C43;
 	border: none;
+	outline: none;
+	color: #C4C4C4;
 }
