--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -151,6 +151,8 @@
 .settings-container .background-color{
 	background: #25193E;
 	border: 0;
+	outline: none;
+	color: #C4C4C4;
 }
 
 .settings-container .dropdown-special{
