--- a/src/css/Activation.css
+++ b/src/css/Activation.css
@@ -3,7 +3,7 @@
 	height: 360px;
 	transform: translateY(45%);
 	z-index: 99;
-	background: #180F29;
+	background: #1E142F;
 	margin: auto;
 	border-radius: 10px;
 
