--- a/src/css/IndividualCaptcha.css
+++ b/src/css/IndividualCaptcha.css
@@ -1,6 +1,7 @@
 .IndividualCaptcha {
 	height: 510px;
 	overflow-y: scroll !important;
+	overflow-x: hidden !important;
 }
 
 .individual-captcha{
@@ -30,4 +31,8 @@
 .individual-captcha .icons-wrapper .icon{
 	display: inline;
 	padding-right: 10px;
+}
+
+.individual-captcha .icons-wrapper .icon .icon-delete{
+	color: #D47E3F;
 }
