added color to the row buttons

--- a/src/css/IndividualProfile.css
+++ b/src/css/IndividualProfile.css
@@ -32,3 +32,11 @@
 	display: inline;
 	padding-right: 10px;
 }
+
+.individual-profile .icons-wrapper .icon .icon-delete{
+	filter: invert(58%) sepia(94%) saturate(828%) hue-rotate(334deg) brightness(91%) contrast(81%);
+}
+
+.individual-profile .icons-wrapper .icon .icon-edit{
+	filter: invert(74%) sepia(11%) saturate(5266%) hue-rotate(186deg) brightness(97%) contrast(93%);
+}
