--- a/src/css/IndividualCaptcha.css
+++ b/src/css/IndividualCaptcha.css
@@ -34,5 +34,9 @@
 }
 
 .individual-captcha .icons-wrapper .icon .icon-delete{
-	color: #D47E3F;
+	filter: invert(58%) sepia(94%) saturate(828%) hue-rotate(334deg) brightness(91%) contrast(81%);
+}
+
+.individual-captcha .icons-wrapper .icon .icon-edit{
+	filter: invert(74%) sepia(11%) saturate(5266%) hue-rotate(186deg) brightness(97%) contrast(93%);
 }
