Erased the arrows on the dropdowns in the Profile pages

--- a/src/css/CreateProfileShipping.css
+++ b/src/css/CreateProfileShipping.css
@@ -56,6 +56,10 @@
 	color: #C4C4C4;
 }
 
+.dropdown-toggle::after {
+    content: none;
+}
+
 
 .create-profile-shipping-container .button{
 	width: 130px;
