--- a/src/css/EditProfileBilling.css
+++ b/src/css/EditProfileBilling.css
@@ -56,6 +56,10 @@
 	color: #C4C4C4;
 }
 
+.dropdown-toggle::after {
+    content: none;
+}
+
 
 .edit-profile-billing-container .button{
 	width: 130px;
