--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -68,6 +68,7 @@
 
 .settings-container .page-wrapper .setup-button-wrapper .background-color{
 	background: #291C43;
+	width: 500px;
 	border: 0;
 	outline: none;
 	color: #C4C4C4;
