--- a/src/css/CreateProfileShipping.css
+++ b/src/css/CreateProfileShipping.css
@@ -100,6 +100,21 @@
 	border:0;
 }
 
+.create-profile-shipping-container .text-area-right-dropdown{
+	width: 180px;
+	height: 30px;
+	background: #291C43;
+	border-radius: 10px;
+	padding-left: 10px;
+	outline: none;
+	color: #C4C4C4;
+	border:0;
+	overflow: hidden;
+	white-space: pre;
+	text-overflow: ellipsis;
+	-webkit-appearance: none;
+}
+
 .create-profile-shipping-container .button-text{
 	font-family: MADE TOMMY;
 	font-style: normal;
