--- a/src/css/EditProfileShipping.css
+++ b/src/css/EditProfileShipping.css
@@ -100,6 +100,22 @@
 	border:0;
 }
 
+.edit-profile-shipping-container .text-area-right-dropdown{
+	width: 180px;
+	height: 30px;
+	background: #291C43;
+	border-radius: 10px;
+	outline: none;
+	color: #C4C4C4;
+	padding-left: 10px;
+	border:0;
+	overflow: hidden;
+    white-space: pre;
+    text-overflow: ellipsis;
+    -webkit-appearance: none;
+}
+
+
 .edit-profile-shipping-container .button-text{
 	font-family: MADE TOMMY;
 	font-style: normal;
